<resources>
    <string name="app_name">workoutlogo</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_an_account_signup">Don\'t Have an account? <u>SignUp</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="have_an_account_login">Have an account? LogIn</string>
    <string name="phone">Phone</string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>